src/test/resources/etapa3/failing/methodAlreadyDeclared.ru
struct A {
    Int a, b;
}

impl A {
    .(Int a, Int b) {}
    fn method_1 () -> void {}
    st fn method_1(Int wala, Str jeje) -> Int {
        ret 1;
    }
}

start {}